# SEA_Assignment

./: .dockerignore  .env.example  .gitignore  CHAT_README.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  how-to-setup.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: Home.py
app/pages/: 01_ASS01_Hill_Climb.py  02_01_Steepest_Ascent_Hill_Climb.py  02_Chat_Interface.py  03_TST_Random_Sreach.py  04_ASS01_Hill_Climb.py  05_ASS02_Genetic_Algorithms.py  06_ASS03_Genetic_Algorithm_Variations.py  07_ASS04_Simulated_Annealing.py  08_ASS05_Ant_Colony_Optimization.py  09_ASS06_Particle_Swarm_Optimization.py  10_ASS07_Differential_Evolution.py  11_ASS08_Anything_Goes.py  99_TST_Theme_Test.py
app/utils/ant_colony_optimization/: algorithms.py  config.py  functions.py  ui.py
app/utils/anything_goes/: algorithms.py  config.py  functions.py  ui.py
app/utils/chat/: llm_client.py  rag.py  ui.py
app/utils/differential_evolution/: algorithms.py  config.py  functions.py  ui.py
app/utils/general/: pdf_viewer.py  ui.py
app/utils/genetic_algorithm/: algorithms.py  config.py  functions.py  ui.py
app/utils/genetic_algorithm_variations/: algorithms.py  config.py  functions.py  image_utils.py  ui.py
app/utils/hill_climb/: algorithms.py  functions.py
app/utils/home/: config.py  github.py  jokes.py  ui.py
app/utils/particle_swarm_optimization/: algorithms.py  config.py  functions.py  ui.py
app/utils/random_search/: algorithms.py  functions.py
app/utils/simulated_annealing/: algorithms.py  (+3 more)
docker/: dockerfile  start.sh
(+437 files in other folders)
