[project]
name = "sea-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "plotly>=6.3.1",
    "streamlit>=1.50.0",
    "openai>=1.30.0",
    "PyPDF2>=3.0.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "streamlit-chat>=0.1.0",
    "python-dotenv>=1.0.0",
    "streamlit-pdf-viewer>=0.0.26",
    "pytz>=2025.2",
    "scikit-image>=0.25.2",
    "pillow>=11.3.0",
    "pot>=0.9.6.post1",
    "shapely>=2.0.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
